--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,162 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.smallnico</groupId>
-	<version>1.0.0</version>
+	<groupId>com.gitee.ainilili</groupId>
+	<version>1.0.1</version>
 	<artifactId>ourbatis</artifactId>
 	<name>ourbatis</name>
 	<description>General XML solution based on mybatis</description>
+	<url>https://github.com/ainilili/ourbatis</url>
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+	
+	<developers>
+		<developer>
+			<name>nico</name>
+			<email>ainililia@163.com</email>
+			<organization>iamnico</organization>
+			<organizationUrl>http://smallnico.com</organizationUrl>
+		</developer>
+	</developers>  
+	
+	<scm>
+        <url>https://github.com/ainilili/ourbatis</url>
+    </scm>
+    
+    <properties>
+		<java.version.source>1.8</java.version.source>
+		<java.version.target>1.8</java.version.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.compiler.argument />
+		<spring-boot.version>2.0.5.RELEASE</spring-boot.version>
+		<ourbatis.version>1.0.0</ourbatis.version>
+		<ourbatis-spring-boot.version>1.0.0</ourbatis-spring-boot.version>
+		<java.test.compiler.argument>${java.compiler.argument}</java.test.compiler.argument>
+	</properties>
+    
+    <build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>${java.version.source}</source>
+						<target>${java.version.target}</target>
+						<compilerArgument>${java.compiler.argument}</compilerArgument>
+						<testSource>${java.specification.version}</testSource>
+						<testTarget>${java.specification.version}</testTarget>
+						<testCompilerArgument>${java.test.compiler.argument}</testCompilerArgument>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>1.6.7</version>
+					<extensions>true</extensions>
+					<configuration>
+						<serverId>nico</serverId>
+						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+						<autoReleaseAfterClose>true</autoReleaseAfterClose>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.2.1</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar-no-fork</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+							<configuration>
+								<additionalparam>-Xdoclint:none</additionalparam>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.5</version>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>jarjar-maven-plugin</artifactId>
+					<version>1.9</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+        <plugins>
+        	<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+			</plugin>
+        </plugins>
+	</build>
+	
+	<distributionManagement>
+		<snapshotRepository>
+			<id>nico</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>nico</id> 
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	
 	
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.4.5</version>
+			<version>3.4.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.gitee.ainilili</groupId>
@@ -22,17 +166,4 @@
 		</dependency>
 	</dependencies>
 	
-	<build> 
-	    <plugins> 
-	        <plugin> 
-	            <groupId>org.apache.maven.plugins</groupId> 
-	            <artifactId>maven-compiler-plugin</artifactId> 
-	            <version>2.0.2</version> 
-	            <configuration> 
-	                <source>1.8</source> 
-	                <target>1.8</target> 
-	            </configuration> 
-	        </plugin> 
-	    </plugins> 
-	</build> 
 </project>
