--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.gitee.ainilili</groupId>
-	<version>1.0.0</version>
+	<groupId>com.smallnico</groupId>
+	<version>1.0.1</version>
 	<artifactId>ourbatis</artifactId>
 	<name>ourbatis</name>
 	<description>General XML solution based on mybatis</description>
@@ -157,7 +157,7 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.4.6</version>
+			<version>3.4.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.gitee.ainilili</groupId>
