--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -21,4 +20,25 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
+
+target
+.project
+.DS_Store
+.classpath
+.settings
+*.log
+*.log.*
+
+.idea
+.gradle
+build
+bin
+out
+*.iml
+
+
+target
+.project
+.DS_Store
+.classpath
+.settings
