--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.smallnico</groupId>
-	<version>1.0.6</version>
+	<version>1.0.7</version>
 	<artifactId>ourbatis</artifactId>
 	<name>ourbatis</name>
 	<description>General XML solution based on mybatis</description>
@@ -160,9 +160,9 @@
 			<version>3.4.5</version>
 		</dependency>
 		<dependency>
-			<groupId>com.gitee.ainilili</groupId>
+			<groupId>com.smallnico</groupId>
 			<artifactId>noson</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 		</dependency>
 	</dependencies>
 	
